Fixed visibility on newsletter signup

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13422,6 +13422,7 @@ li.lv3-li {
   font-size: 18px;
   height: 45px;
   margin-right: 15px;
+  color: #ffffff;
 }
 .btn-lg,
 .btn-group-lg > .btn {
