--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -3995,6 +3995,7 @@ padding-left: 0;
 font-size: 18px;
 height: 45px;
 margin-right: 15px;
+color: #ffffff;
 }
 
 .btn-lg {
